Adding additional logic to write out JSON data and implemented PUT and POST methods
